--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.3",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
