--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,11 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-open-weather": "^1.3.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-scripts": "^5.0.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
