--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "object-sizeof": "^2.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^7.1.2"
+    "passport-local-mongoose": "^7.1.2",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
