--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-open-weather": "^1.3.0",
     "react-password-strength-bar": "^0.4.1",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "uniqid": "^5.4.0",
