--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
   "author": "rom",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "googleapis": "^105.0.0",
     "mongoose": "^6.9.0",
     "nodemailer": "^6.9.1",
     "object-sizeof": "^2.6.1",
