--- a/backend/package.json
+++ b/backend/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "sync": "nodemon collabServer.js"
   },
   "author": "rom",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/local-auth": "^2.1.0",
+    "@teamwork/websocket-json-stream": "^2.0.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
@@ -19,13 +21,17 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "googleapis": "^105.0.0",
+    "http": "^0.0.1-security",
     "mongoose": "^6.9.0",
     "nodemailer": "^6.9.1",
     "object-sizeof": "^2.6.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
-    "uniqid": "^5.4.0"
+    "rich-text": "^4.1.0",
+    "sharedb": "^3.3.1",
+    "uniqid": "^5.4.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
