--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.3",
     "lodash": "^4.17.21",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -24,10 +25,14 @@
     "react-password-strength-bar": "^0.4.1",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "reconnecting-websocket": "^4.4.0",
+    "rich-text": "^4.1.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "sharedb": "^3.3.1",
     "uniqid": "^5.4.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
