--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
+    "socket.io": "^4.6.1",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
