--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-spinners": "^0.13.8",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "socket.io-client": "^4.6.1",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
