--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "sync": "nodemon collabServer.js"
+    "sync": "nodemon collabGPT.js"
   },
   "author": "rom",
   "license": "ISC",
@@ -25,11 +25,14 @@
     "mongoose": "^6.9.0",
     "nodemailer": "^6.9.1",
     "object-sizeof": "^2.6.1",
+    "ot-text": "^1.0.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "rich-text": "^4.1.0",
     "sharedb": "^3.3.1",
+    "sharedb-mongo": "^3.0.1",
+    "socket.io": "^4.6.1",
     "uniqid": "^5.4.0",
     "ws": "^8.13.0"
   },
