--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "sharedb": "^3.3.1",
+    "socket.io-client": "^4.6.1",
     "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4",
     "ws": "^8.13.0"
